# rdxtgbot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4a0b83a  CMakeLists.txt.user.dde2b38  Database.cpp  Logger.h  Notification.h  ad.cpp  ad.h  auxiliary.h  bashcommand.cpp  bashcommand.h  bot_commands.cpp  bot_commands.h  botextended.cpp  botextended.h  comments_archive.txt  ctime++.cpp  ctime++.h  database.cpp  database.h  database.hpp  database_old.cpp  dataentry.h  filesystem.h  listeners.cpp  listeners.h  logger.cpp  logger.h  main.cpp  multithreading.cpp  multithreading.h  myhttpclient.h  notification.cpp  notification.h  schedule.cpp  schedule.h  sqlfile.cpp  sqlfile.h  (+9 more)
.cmake/api/v1/reply/: cache-v2-31aeff38caca1b00f4fc.json  cmakeFiles-v1-53495467254b286983c0.json  codemodel-v2-d427d0908e75f50af7d4.json  index-2024-07-19T06-58-59-0451.json  target-tgbot-465bac6e3904c1104760.json
include/: Auxiliary.h  Backup.h  BashCommand.h  BotAction.h  BotExtended.h  Ctime++.h  Logger.h  MyHTTPclient.h  NetInterface.h  Notification.h  SQLFile.h  Table.h  UserExtended.h  VPS.h
src/: Auxiliary.cpp  BashCommand.cpp  BotAction.cpp  BotExtended.cpp  Ctime++.cpp  Logger.cpp  NetInterface.cpp  Notification.cpp  SQLFile.cpp  Table.cpp  UserExtended.cpp  VPS.cpp  main.cpp
